Fix overflow in chatroom

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content:space-between;
     align-items: center;
-    padding: 0px;
+    padding: 0px 0px 0px 15px;
   }
 
   .navBtn{
