--- a/src/app/room/room.component.css
+++ b/src/app/room/room.component.css
@@ -3,7 +3,7 @@
     /* top: 50px; */
     /* width: 99%; */
     width: -webkit-fill-available;
-    height: 90%;
+    height: 89%;
     display: flex;
     justify-content: space-between;
     justify-content: center;
@@ -31,7 +31,6 @@
   width: 20%;
   /* display: flex; */
   padding: 0px;
-  margin-right: 15px;
   /* border: 1px solid steelblue;
   border-radius: 5px; */
   background-color:rgb(53, 53, 53);
