--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,6 @@ body {
   background-color: rgb(40, 44, 52);
   color: wheat;
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 a {
